--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/contactsApp
 spring.datasource.username=postgres
 spring.datasource.password=gigimate123
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.default_schema=public
-
+spring.flyway.baseline-on-migrate=true
+#spring.fl
