--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/contactsApp
+spring.datasource.url=jdbc:postgresql://localhost:5432/contactsapp
 spring.datasource.username=postgres
-spring.datasource.password=gigimate123
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql = true
+
+
 spring.jpa.properties.hibernate.default_schema=public
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-on-migrate=true
 #spring.fl
