--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation("org.springdoc:springdoc-openapi-ui:1.6.12")
     implementation('org.mapstruct:mapstruct:1.5.3.Final')
     annotationProcessor('org.mapstruct:mapstruct-processor:1.5.3.Final')
+    testImplementation "org.testcontainers:testcontainers:1.17.5"
+    testImplementation "org.testcontainers:junit-jupiter:1.17.5"
+    implementation platform('org.testcontainers:testcontainers-bom:1.17.5') //import bom
+    testImplementation "org.testcontainers:postgresql:1.17.5"
+    testImplementation "org.testcontainers:rabbitmq:1.17.5"
 
 
 }
